--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Airbnb clone</title>
-  </head>
-  <body style="margin:0; padding:0;">
-    <header style="background-color: #FF0000; height: 70px; width: 100%">
-    </header>
-    <Footer style="background-color: #00FF00; height: 60px; width: 100%; position: absolute; bottom: 0">
-      <p style="text-align: center; vertical-align: middle;">Holberton School</p>
-    </Footer>
-  </body>
- </html>
+	<meta charset="utf-8">
+	<title>AirBnB clone</title>
+
+	<body style="margin: 0; padding: 0;">
+		<header style="background-color: #f00; height: 70PX; width: 100%;">
+		</header>
+		<footer style="text-align: center;
+					background-color: #0f0;
+					height: 60PX;
+					width: 100%;
+					bottom: 0;
+					justify-content: center;
+					position: absolute;
+					align-items: center;
+					display: flex;">
+			Best School
+		</footer>
+</body>
+</html>
