--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="styles/3-common.css"/>
-    <link rel="stylesheet" type="text/css" href="styles/3-header.css"/>
-    <link rel="stylesheet" type="text/css" href="styles/3-footer.css"/>
-    <link rel="icon" href="images/icon.png"/>
-    <title>AirBnB clone</title>
-  </head>
-  <body>
-    <header>
-    </header>
-    <footer>
-      <p>Holberton School</p>
-    </footer>
-  </body>
-  </html>
+<head>
+	<meta charset="utf-8">
+	<title>AirBnB clone</title>
+	<link rel="stylesheet" href="styles/3-common.css">
+	<link rel="stylesheet" href="styles/3-header.css">
+	<link rel="stylesheet" href="styles/3-footer.css">
+	<link rel="icon" href="images/icon.png">
+</head>
+<body>
+	<header>
+		
+	</header>
+	<footer>
+		Best School
+	</footer>
+
+</body>
+</html>
