--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -1,54 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styles/4-common.css"/>
-    <link rel="stylesheet" type="text/css" href="styles/3-header.css"/>
-    <link rel="stylesheet" type="text/css" href="styles/3-footer.css"/>
-    <link rel="stylesheet" type="text/css" href="styles/6-filters.css"/>
-    <link rel="icon" href="images/icon.png"/>
-    <title>Airbnb clone</title>
+	<meta charset="utf-8">
+	<title>AirBnB clone</title>
+	<link rel="stylesheet" href="styles/4-common.css">
+	<link rel="stylesheet" href="styles/6-filters.css">
+	<link rel="stylesheet" href="styles/3-header.css">
+	<link rel="stylesheet" href="styles/3-footer.css">
+	<link rel="icon" href="images/icon.png">
 </head>
 <body>
-    <header>
-    </header>
-        <div class="container">
-            <section class="filters">
-                <div class="locations">
-                    <h3>States</h3>
-                    <h4>California, Arizona..</h4>
-                    <ul class="popover">
-                        <li><h2>Nevada</h2>
-                        <ul>
-                            <li>Laughlin</li>
-                            <li>Las Vegas</li>
-                        </ul>
-                        </li>
-                        <li><h2>California</h2>
-                        <ul>
-                            <li>San Diego</li>
-                            <li>San Francisco</li>
-                        </ul>
-                        </li>
-                    </ul>
-                </div>
-                <div class="amenities">
-                    <h3>Ammenites</h3>
-                    <h4>Internet, Kitchen..</h4>
-                    <ul class="popover">
-                        <li>Internet</li>
-                        <li>Kitchen</li>
-                        <li>Laundry</li>
-                        <li>TV cable</li>
-                        <li>Pool</li>
-                    </ul>
-                </div>
-                <button>Search</button>
-            </section>
-        </div>
-    <footer>
-        <p>Holberton School</p>
-    </footer>  
+	<header></header>
+	<div class="container">
+		<section class="filters">
+		 	<div class="locations">
+				<h3>States</h3>
+				<h4>ie. Addis Ababa, Dire Dawa...</h4>
+				<div class="popover">
+					<h2>Addis Ababa</h2>
+					<ul>
+						<li>Bole</li>
+						<li>piassa</li>
+						<li>Mexico</li>
+					</ul>
+					<h2>Dire Dawa</h2>
+					<ul>
+						<li>Konel</li>
+						<li>Ashewa</li>
+						<li>Kezira</li>
+					</ul>
+				</div>
+			</div><div class="amenities">
+				<h3>Amenities</h3>
+				<h4>ie. Internet,Kitchen ...</h4>
+				<div class="popover">
+					<ul>
+						<li>Internet</li>
+						<li>Tv</li>
+						<li>Kitchen</li>
+						<li>Iron</li>
+						<li>Swimming pool</li>
+					</ul>
+				</div>
+			</div>
+			<button>Search</button>	
+		</section>
+	</div>
+	<footer>
+		Best School
+	</footer>
 </body>
 </html>
